python kakao token 연결

--- a/python/python 6.ipynb
+++ b/python/python 6.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f23889ae",
+   "id": "ae94f909",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bad8f82c",
+   "id": "ed6bfa34",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b155e5f0",
+   "id": "226ab95b",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a9d6e201",
+   "id": "8fc617c2",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "eb0b9ca9",
+   "id": "82eebb79",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "740c1870",
+   "id": "59636b37",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a25f889a",
+   "id": "a976abe1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "60c94aa7",
+   "id": "49f568c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b632b8d1",
+   "id": "d3a27aa2",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "85d5f546",
+   "id": "8423f7c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4a4169ec",
+   "id": "400d3077",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2d11d092",
+   "id": "326337a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "2cbf7b20",
+   "id": "81256228",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a29eda3d",
+   "id": "5b5e3257",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "9cf8ecb2",
+   "id": "5a45e106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "39ac8231",
+   "id": "02096b3a",
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "3b5372e0",
+   "id": "755ab9ba",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,146 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1953664c",
+   "id": "1efedab4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "34f72550",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 카톡 메시지 보내기\n",
+    "# 어플리케이션 닉네임 - 필수, 계정 - 선택, 메시지 - 선택\n",
+    "# 카카오 로그인 - 활성화\n",
+    "# Redirect URI: https://localhost.com\n",
+    "# 플랫폼 : https://localhost.com\n",
+    "# 부가적으로 naver나 daum 넣고 안넣어도 됨\n",
+    "# API:\n",
+    "# /oauth/authorize?client_id=${REST_API_KEY}&redirect_uri=${REDIRECT_URI}&response_type=code HTTP/1.1\n",
+    "# Host: \n",
+    "# kauth.kakao.com\n",
+    "# 위의 URL로 이동하여 토큰 발급\n",
+    "\n",
+    "# https://accounts.kakao.com/login?continue=https%3A%2F%2Fkauth.kakao.com%2Foauth%2Fauthorize%3Fresponse_type%3Dcode%26redirect_uri%3Dhttps%253A%252F%252Flocalhost.com%26client_id%3D6dc63dfe7748b63e5bf1967de914b672"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "b763177a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'access_token': '-Wz6bvb9BzY7ItnJAKQPnr8VGmuajHYzwyz4S2KGCj11mgAAAYDgw8bp', 'token_type': 'bearer', 'refresh_token': '99Tx12Bl_90YsWeQj2cXbu9dUwt9LzYa4elNS4tnCj11mgAAAYDgw8bn', 'expires_in': 21599, 'scope': 'account_email talk_message profile_nickname', 'refresh_token_expires_in': 5183999}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://kauth.kakao.com/oauth/token\"\n",
+    "\n",
+    "data = {\n",
+    "    \"grant_type\": \"authorization_code\",\n",
+    "    \"client_id\": \"6dc63dfe7748b63e5bf1967de914b672\",\n",
+    "    \"redirect_uri\": \"https://localhost.com\",\n",
+    "    \"code\": \"ZDOiOoN1D7d0lla5dBQ1D_xS98_mQKTjZ1SVXXoqeHVqLAZXW_EaPOAd7DKP5g5kZ6MdzAopcSEAAAGA4MNLjg\"\n",
+    "}\n",
+    "\n",
+    "response = requests.post(url, data=data)\n",
+    "\n",
+    "if response.status_code != 200:\n",
+    "    print(\"에러!\")\n",
+    "    \n",
+    "else:\n",
+    "    tokens = response.json()\n",
+    "    print(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "381dc5c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import datetime\n",
+    "import os\n",
+    "\n",
+    "# Kakao Token 저장 파일\n",
+    "KAKAO_TOKEN_SAVED_FILE = \"kakao_msg/kakao_token.json\"\n",
+    "\n",
+    "# 저장\n",
+    "def save_tokens(filename, tokens):\n",
+    "    with open(filename, \"w\") as fp:\n",
+    "        json.dump(tokens, fp)\n",
+    "        \n",
+    "# 읽기\n",
+    "def load_tokens(filename):\n",
+    "    with open(filename) as fp:\n",
+    "        tokens = json.load(fp)\n",
+    "        \n",
+    "    return tokens\n",
+    "\n",
+    "# token 저장\n",
+    "save_tokens(KAKAO_TOKEN_SAVED_FILE, tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "29fbbb8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "카톡 메시지가 간드아!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokens = load_tokens(KAKAO_TOKEN_SAVED_FILE)\n",
+    "\n",
+    "url = \"https://kapi.kakao.com/v2/api/talk/memo/default/send\"\n",
+    "\n",
+    "headers = {\n",
+    "    \"Authorization\": \"Bearer \" + tokens['access_token']\n",
+    "}\n",
+    "\n",
+    "data = {\n",
+    "    \"template_object\": json.dumps({\n",
+    "        \"object_type\": \"text\",\n",
+    "        \"text\": \"그만 보내!\",\n",
+    "        \"link\": {\n",
+    "            \"web_url\": \"https://www.naver.com\"\n",
+    "        }\n",
+    "    })\n",
+    "}\n",
+    "\n",
+    "response = requests.post(url, headers=headers, data=data)\n",
+    "print(response.status_code)\n",
+    "\n",
+    "if response.status_code != 200:\n",
+    "    print(\"에러!\")\n",
+    "else:\n",
+    "    print(\"카톡 메시지가 간드아!!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f42b9314",
    "metadata": {},
    "outputs": [],
    "source": []
