python kakao token 연결 (code 삭제)

--- a/python/python 6.ipynb
+++ b/python/python 6.ipynb
@@ -680,12 +680,13 @@
     "# kauth.kakao.com\n",
     "# 위의 URL로 이동하여 토큰 발급\n",
     "\n",
+    "# https://kauth.kakao.com/oauth/authorize?client_id=6dc63dfe7748b63e5bf1967de914b672&redirect_uri=https://localhost.com&\n",
     "# https://accounts.kakao.com/login?continue=https%3A%2F%2Fkauth.kakao.com%2Foauth%2Fauthorize%3Fresponse_type%3Dcode%26redirect_uri%3Dhttps%253A%252F%252Flocalhost.com%26client_id%3D6dc63dfe7748b63e5bf1967de914b672"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "b763177a",
    "metadata": {},
    "outputs": [
@@ -693,7 +694,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'access_token': '-Wz6bvb9BzY7ItnJAKQPnr8VGmuajHYzwyz4S2KGCj11mgAAAYDgw8bp', 'token_type': 'bearer', 'refresh_token': '99Tx12Bl_90YsWeQj2cXbu9dUwt9LzYa4elNS4tnCj11mgAAAYDgw8bn', 'expires_in': 21599, 'scope': 'account_email talk_message profile_nickname', 'refresh_token_expires_in': 5183999}\n"
+      "{'access_token': 'F5I8BmTSGX43L1oNL4rn0PgRoAtCCZqAOviJ5nUeCisMqAAAAYDvrdQO', 'token_type': 'bearer', 'refresh_token': 'T76v_HAHYrRoXeTr3ecUjyE7kULgeQc_M699RL7vCisMqAAAAYDvrdQN', 'expires_in': 21599, 'scope': 'account_email talk_message profile_nickname', 'refresh_token_expires_in': 5183999}\n"
      ]
     }
    ],
@@ -704,9 +705,9 @@
     "\n",
     "data = {\n",
     "    \"grant_type\": \"authorization_code\",\n",
-    "    \"client_id\": \"6dc63dfe7748b63e5bf1967de914b672\",\n",
+    "    \"client_id\": \"\",\n",
     "    \"redirect_uri\": \"https://localhost.com\",\n",
-    "    \"code\": \"ZDOiOoN1D7d0lla5dBQ1D_xS98_mQKTjZ1SVXXoqeHVqLAZXW_EaPOAd7DKP5g5kZ6MdzAopcSEAAAGA4MNLjg\"\n",
+    "    \"code\": \"\"\n",
     "}\n",
     "\n",
     "response = requests.post(url, data=data)\n",
@@ -721,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "id": "381dc5c1",
    "metadata": {},
    "outputs": [],
@@ -751,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "id": "29fbbb8b",
    "metadata": {},
    "outputs": [
