python 하드 코딩 삭제

--- a/python/python 6.ipynb
+++ b/python/python 6.ipynb
@@ -678,15 +678,12 @@
     "# /oauth/authorize?client_id=${REST_API_KEY}&redirect_uri=${REDIRECT_URI}&response_type=code HTTP/1.1\n",
     "# Host: \n",
     "# kauth.kakao.com\n",
-    "# 위의 URL로 이동하여 토큰 발급\n",
-    "\n",
-    "# https://kauth.kakao.com/oauth/authorize?client_id=6dc63dfe7748b63e5bf1967de914b672&redirect_uri=https://localhost.com&\n",
-    "# https://accounts.kakao.com/login?continue=https%3A%2F%2Fkauth.kakao.com%2Foauth%2Fauthorize%3Fresponse_type%3Dcode%26redirect_uri%3Dhttps%253A%252F%252Flocalhost.com%26client_id%3D6dc63dfe7748b63e5bf1967de914b672"
+    "# 위의 URL로 이동하여 토큰 발급\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b763177a",
    "metadata": {},
    "outputs": [
@@ -694,7 +691,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'access_token': 'F5I8BmTSGX43L1oNL4rn0PgRoAtCCZqAOviJ5nUeCisMqAAAAYDvrdQO', 'token_type': 'bearer', 'refresh_token': 'T76v_HAHYrRoXeTr3ecUjyE7kULgeQc_M699RL7vCisMqAAAAYDvrdQN', 'expires_in': 21599, 'scope': 'account_email talk_message profile_nickname', 'refresh_token_expires_in': 5183999}\n"
+      "{'access_token': 'Q6uFLH16oncdb0hHjVPcvy-Lbs2ACc61YvIEcn_cCilwnwAAAYD6E0ku', 'token_type': 'bearer', 'refresh_token': 'mVOiU5gQeTUmT-VPa-2zIdv_U5BOiWoZ_S37caVQCilwnwAAAYD6E0kt', 'expires_in': 21599, 'scope': 'account_email talk_message profile_nickname friends', 'refresh_token_expires_in': 5183999}\n"
      ]
     }
    ],
@@ -722,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "381dc5c1",
    "metadata": {},
    "outputs": [],
