--- a/python/python 7.ipynb
+++ b/python/python 7.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "# https://kauth.kakao.com/oauth/authorize?client_id=559cf5dc26a9df776f0b704af116bee5&redirect_uri=https://localhost.com&response_type=code&scope=talk_message,friends"
+    "# https://kauth.kakao.com/oauth/authorize?client_id=&redirect_uri=https://localhost.com&response_type=code&scope=talk_message,friends"
    ]
   },
   {
@@ -81,9 +81,9 @@
     "\n",
     "data = {\n",
     "    \"grant_type\": \"authorization_code\",\n",
-    "    \"client_id\": \"559cf5dc26a9df776f0b704af116bee5\",\n",
+    "    \"client_id\": \"\",\n",
     "    \"redirect_uri\": \"https://localhost.com\",\n",
-    "    \"code\": \"8PVbHsn0ztWTv2xt6UXB1GqRS6UDQW-TUlGpHSqiIX1Sw6yVJuowOA9KlMyVVxNQ2c9_fAo9dJkAAAGA9RFldg\"\n",
+    "    \"code\": \"\"\n",
     "}\n",
     "\n",
     "response = requests.post(url, data=data)\n",
@@ -274,8 +274,8 @@
     "import pickle\n",
     "\n",
     "naver_user_info = dict({\n",
-    "    \"smtp_user_id\": \"rimizzaang@naver.com\",\n",
-    "    \"smtp_user_pw\": \"dpfvm13-\"\n",
+    "    \"smtp_user_id\": \"\",\n",
+    "    \"smtp_user_pw\": \"\"\n",
     "})\n",
     "\n",
     "f = open(NAVER_USER_DATA_SAVED_FILE, 'wb')\n",
